--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,23 +1,30 @@
-name: Hermes Bot Daily Run
+name: Hermes Sovereign Artisan Daily Run
 on:
   schedule:
     - cron: '0 21 * * *'
   workflow_dispatch:
 
 jobs:
-  run-bot:
+  run-artisan:
     runs-on: ubuntu-latest
+    timeout-minutes: 360 # 人間らしい丁寧な作業のため、タイムアウトを6時間に設定
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-      - name: Install
+          cache: 'pip'
+          
+      - name: Install Professional Dependencies
         run: |
           pip install playwright playwright-stealth gspread oauth2client
           playwright install chromium
           playwright install-deps chromium
-      - name: Run
+          
+      - name: Execute Sovereign Mission
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+          PYTHONUNBUFFERED: "1" # ログをリアルタイムで出力
         run: python main.py
