--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,30 +1,40 @@
 name: Hermes Sovereign Artisan Daily Run
+
 on:
   schedule:
-    - cron: '0 21 * * *'
-  workflow_dispatch:
+    # 毎日21:00 (JST) に起動。人間が業務を開始する時間帯を再現
+    - cron: '0 12 * * *' 
+  workflow_dispatch: # 手動実行も可能に
 
 jobs:
   run-artisan:
     runs-on: ubuntu-latest
-    timeout-minutes: 360 # 人間らしい丁寧な作業のため、タイムアウトを6時間に設定
+    # 人間らしい丁寧な作業（読み戻し検証や待機）を行うため、十分な時間を確保
+    timeout-minutes: 400 
+
     steps:
-      - uses: actions/checkout@v3
+      - name: "Step 1: 現場(リポジトリ)の確認"
+        uses: actions/checkout@v3
       
-      - name: Set up Python 3.9
+      - name: "Step 2: Python 3.9 環境の構築"
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-          cache: 'pip'
+          # キャッシュエラーを回避するため、あえて既存ファイルに依存しない構成に
           
-      - name: Install Professional Dependencies
+      - name: "Step 3: 職人の道具(ライブラリ)を揃える"
         run: |
+          python -m pip install --upgrade pip
           pip install playwright playwright-stealth gspread oauth2client
+          
+      - name: "Step 4: 鑑定士の『眼』(Chromium)をインストール"
+        run: |
           playwright install chromium
           playwright install-deps chromium
           
-      - name: Execute Sovereign Mission
+      - name: "Step 5: ミッション開始 (HERMES MASTERPIECE EXECUTING)"
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-          PYTHONUNBUFFERED: "1" # ログをリアルタイムで出力
+          # ログをリアルタイムで出力し、進捗を可視化
+          PYTHONUNBUFFERED: "1"
         run: python main.py
