--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,40 +1,23 @@
-name: Hermes Sovereign Artisan Daily Run
-
+name: Hermes Bot Daily Run
 on:
   schedule:
-    # 毎日21:00 (JST) に起動。人間が業務を開始する時間帯を再現
-    - cron: '0 12 * * *' 
-  workflow_dispatch: # 手動実行も可能に
+    - cron: '0 21 * * *'
+  workflow_dispatch:
 
 jobs:
-  run-artisan:
+  run-bot:
     runs-on: ubuntu-latest
-    # 人間らしい丁寧な作業（読み戻し検証や待機）を行うため、十分な時間を確保
-    timeout-minutes: 400 
-
     steps:
-      - name: "Step 1: 現場(リポジトリ)の確認"
-        uses: actions/checkout@v3
-      
-      - name: "Step 2: Python 3.9 環境の構築"
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-          # キャッシュエラーを回避するため、あえて既存ファイルに依存しない構成に
-          
-      - name: "Step 3: 職人の道具(ライブラリ)を揃える"
+      - name: Install
         run: |
-          python -m pip install --upgrade pip
           pip install playwright playwright-stealth gspread oauth2client
-          
-      - name: "Step 4: 鑑定士の『眼』(Chromium)をインストール"
-        run: |
           playwright install chromium
           playwright install-deps chromium
-          
-      - name: "Step 5: ミッション開始 (HERMES MASTERPIECE EXECUTING)"
+      - name: Run
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-          # ログをリアルタイムで出力し、進捗を可視化
-          PYTHONUNBUFFERED: "1"
         run: python main.py
